@@ -256,6 +256,9 @@ Extension Modules
 Library
 -------
 
+- bpo-29271: Fix Task.current_task and Task.all_tasks implemented in C
+  to accept None argument as their pure Python implementation.
+
 - bpo-29703: Fix asyncio to support instantiation of new event loops
   in child processes.
 
